test_regress/t/t_pp_misdef_bad.out
%Error: t/t_pp_misdef_bad.v:10: Define or directive not defined: '`NDEFINED'
                              : ... Suggested alternative: '`DEFINED'
%Error: t/t_pp_misdef_bad.v:13: Define or directive not defined: '`imescale'
                              : ... Suggested alternative: '`timescale'
%Error: Exiting due to
